fix: 修复按需加载问题

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
 
 </html>
 
+<style>
+    @import '@rr13k/so';
+</style>
+
 <script type="module">
-    import './src/index.scss';
+    // import '@rr13k/so/button';
 </script>
