--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 </html>
 
 <style>
-    @import '@rr13k/so';
+    /* @import '@rr13k/so'; */
 </style>
 
 <script type="module">
-    // import '@rr13k/so/button';
+    import '@rr13k/so';
 </script>
